--- a/practice-css/browser-intro.css
+++ b/practice-css/browser-intro.css
@@ -1,13 +1,17 @@
 p {
 	color: navy;
+	
 }
 
 p.info {
-	font-size: 10pt;
+	font-size: small;
+	background-color: #dfdfdf;
 }
 
+
 h1 {
-	background-color: #7f7fcf;
+	color:white;
+	text-shadow:navy;
 }
 
 h2 {
@@ -16,12 +20,19 @@ h2 {
 }
 
 div#zentai {
-	display: flex;
+	display: grid;
+	grid-template-columns:1fr 1fr;
+	grid-auto-rows: 200px 200px;
+	grid-gap: 10px;
 	flex-direction: row;
-	width: 1024px;
+
+	width: 500px;
 }
 
 div#zentai > div {
+	font-family:cursive;
+	color:#3f3faf;
+	background-color:linear-gradient(white,#ffefaf);
 	margin-left: 5px;
-	background-color: #ffefaf;
+	background-color:#ffefaf;
 }
