--- a/practice-css/browser-intro.css
+++ b/practice-css/browser-intro.css
@@ -12,11 +12,15 @@ p.info {
 h1 {
 	color:white;
 	text-shadow:navy;
+	background-color: #7f7f7f;
 }
 
 h2 {
 	border: solid 1px black;
 	margin: 5px;
+	font-family:cursive;
+	color: #3f3faf;
+	background: linear-gradient(.25turn,white, 10%, #ffefaf);
 }
 
 div#zentai {
@@ -24,12 +28,16 @@ div#zentai {
 	grid-template-columns:1fr 1fr;
 	grid-auto-rows: 200px 200px;
 	grid-gap: 10px;
-	flex-direction: row;
-
-	width: 500px;
+	width: 1024px;
 }
-
+div#zentai.target{
+	padding: 5px;
+}
+img{
+	float: right;
+}
 div#zentai > div {
+	
 	font-family:cursive;
 	color:#3f3faf;
 	background-color:linear-gradient(white,#ffefaf);
